--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,13 @@
 			</div>
 		</nav>
 		<div class="container-fluid">
+            {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        {% for message in messages %}
+                            <div class="text-danger">{{ message }}</div>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
 			{% block content %}{% endblock %}
 		</div>
 	</body>
