--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
             {% with messages = get_flashed_messages() %}
                     {% if messages %}
                         {% for message in messages %}
-                            <div class="text-danger">{{ message }}</div>
+                            <div class="text-danger bg-light">{{ message }}</div>
                         {% endfor %}
                     {% endif %}
                 {% endwith %}
